--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <title>Drum Game</title>
-</head>
-<body>
-    <h1>Primer commit</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <title>Drum Game</title>
+    </head>
+    <body>
+        <header>
+            <img class="logo" src="images/DrumLogo.png" alt="Logo">
+            <nav>
+                <ul class="nav_links">
+                    <li><a href="#">Iniciar Sesión</a></li>
+                    <li><a href="#">Descargas</a></li>
+                </ul>
+            </nav>
+        </header>
+
+    </body>
 </html>
