--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <nav>
                 <ul class="nav_links">
                     <li><a href="#">Iniciar Sesión</a></li>
-                    <li><a href="#">Descargas</a></li>
                 </ul>
             </nav>
+            <a class="cta"><button href="#">Descargas</button></a>
         </header>
 
     </body>
