--- a/index.html
+++ b/index.html
@@ -1,5 +1,46 @@
 <!DOCTYPE html>
 <html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;1,100;1,600&display=swap" rel="stylesheet">
+    <title>Drum Game</title>
+</head>
+<body>
+    <section class="header">
+        <nav>
+            <a href="index.html"> <img src="images/DrumLogoBlanco.png" alt="drum-logo"> </a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="#.">HOME</a></li>
+                    <li><a href="#.">LEADERBOARD</a></li>
+                    <li><a href="#.">INICIAR SESIÓN</a></li>
+                    <li><a href="#.">DESCARGA</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <nav class="text-box">
+            <h1>La percusión es un mundo distinto...</h1>
+            <p>
+                En todos lados podemos encontrar ritmo, pero, ¿podemos distinguir los
+                tipos de sonidos? Nuestro juego de enseñanza procura mejorar esta
+                habilidad de reconocer instrumentos percusivos.
+            </p>
+            <a href="">Descarga nuestro juego</a>
+        </nav>
+
+    </section>
+
+</body>
+</html>
+
+<!--
+<!DOCTYPE html>
+<html lang="es">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,15 +48,27 @@
         <title>Drum Game</title>
     </head>
     <body>
-        <header>
-            <img class="logo" src="images/DrumLogo.png" alt="Logo">
-            <nav>
-                <ul class="nav_links">
-                    <li><a href="#">Iniciar Sesión</a></li>
-                </ul>
-            </nav>
-            <a class="cta"><button href="#">Descargas</button></a>
-        </header>
+        <section class="primera-parte">
+            <div class="header">
+                <img class="logo" src="images/DrumLogo.png" alt="Logo">
+                <nav>
+                    <ul class="nav_links">
+                        <li><a href="#">Iniciar Sesión</a></li>
+                    </ul>
+                </nav>
+                <a class="cta"><button href="#">Descargas</button></a>
+            </div>
+
+            <div class="text-box">
+                <h1>La percusión es un mundo distinto....</h1>
+                <p>
+                    En todos lados podemos encontrar ritmo, pero, ¿podemos distinguir los
+                    tipos de sonidos? Nuestro juego de enseñanza procura mejorar esta
+                    habilidad de reconocer instrumentos percusivos.
+                </p>
+            </div>
+        </section>
 
     </body>
-</html>
+</html> 
+-->
