--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,700;1,100;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Drum Game</title>
 </head>
 <body>
     <section class="header">
         <nav>
             <a href="index.html"> <img src="images/DrumLogoBlanco.png" alt="drum-logo"> </a>
-            <div class="nav-links">
+            <div class="nav-links" id="navLinks">
+                <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
                     <li><a href="#.">HOME</a></li>
                     <li><a href="#.">LEADERBOARD</a></li>
@@ -21,19 +23,38 @@
                     <li><a href="#.">DESCARGA</a></li>
                 </ul>
             </div>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
-        <nav class="text-box">
+        <div class="text-box">
             <h1>La percusión es un mundo distinto...</h1>
-            <p>
+            <p class="textoLanding-pc">
                 En todos lados podemos encontrar ritmo, pero, ¿podemos distinguir los
-                tipos de sonidos? Nuestro juego de enseñanza procura mejorar esta
-                habilidad de reconocer instrumentos percusivos.
+                tipos de sonidos que los componen? <br> Nuestro juego de enseñanza procura mejorar esta habilidad de reconocer instrumentos percusivos.
             </p>
-            <a href="">Descarga nuestro juego</a>
-        </nav>
+            <p class="textoLanding-mobile">
+                Los ritmos están por todas partes, y tú debes aprender de ellos. <br>
+                Descarga nuestro juego para mejorar esta habilidad de reconocer instrumentos percusivos.
+            </p>
+            <a href="" class="descarga-inline">Descarga nuestro juego</a>
+        </div>
 
     </section>
+
+
+
+
+<!------JavaScript para activar menu------>
+<script>
+    var navLinks = document.getElementById("navLinks");
+
+    function showMenu(){
+        navLinks.style.right = "0";
+    }
+    function hideMenu(){
+        navLinks.style.right = "-200px";
+    }
+</script>
 
 </body>
 </html>
