--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Drum Game</title>
 </head>
 <body>
+    <!---Header-->
     <section class="header">
         <nav>
             <a href="index.html"> <img src="images/DrumLogoBlanco.png" alt="drum-logo"> </a>
@@ -41,6 +42,34 @@
 
     </section>
 
+    <!--Nuestro Proyecto-->
+    <section class="proyecto">
+        <h1>Nuestro proyecto</h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, non. Minima quae magni quaerat labore nihil.
+        </p>
+
+        <div class="row">
+            <div class="proyecto-col">
+                <h3>Motivación</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex in, similique voluptatum corrupti inventore quia blanditiis minima nulla voluptates voluptatem perspiciatis molestiae quaerat, fugit minus exercitationem necessitatibus officia provident eveniet!
+                </p>
+            </div>
+            <div class="proyecto-col">
+                <h3>Objetivos</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex in, similique voluptatum corrupti inventore quia blanditiis minima nulla voluptates voluptatem perspiciatis molestiae quaerat, fugit minus exercitationem necessitatibus officia provident eveniet!
+                </p>
+            </div>
+            <div class="proyecto-col">
+                <h3>Transparencia</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex in, similique voluptatum corrupti inventore quia blanditiis minima nulla voluptates voluptatem perspiciatis molestiae quaerat, fugit minus exercitationem necessitatibus officia provident eveniet!
+                </p>
+            </div>
+        </div>
+    </section>
 
 
 
