Responsive Info del Proyecto

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
-                    <li><a href="#.">HOME</a></li>
+                    <li><a href="#.">NUESTRA API</a></li>
                     <li><a href="#.">LEADERBOARD</a></li>
                     <li><a href="#.">INICIAR SESIÓN</a></li>
                     <li><a href="#.">DESCARGA</a></li>
