Landing Page Completa

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
     <!--Nuestro Proyecto-->
     <section class="proyecto">
-        <h1>Nuestro proyecto</h1>
-        <p>
+        <h1 class="h1-con-lineas">Nuestro proyecto</h1>
+        <p class="p-bajo-proyecto">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, non. Minima quae magni quaerat labore nihil.
         </p>
 
@@ -71,7 +71,62 @@
         </div>
     </section>
 
+    <!--Equipo-->
+    <section class="equipo">
+        <h1 class="h1-con-lineas">Nuestro equipo</h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, non. Minima quae magni quaerat labore nihil.
+        </p>
+        <div class="row">
+            <div class="equipo-col">
+                <img src="images/person-placeholder.png">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo atque inventore voluptatibus suscipit ab odio at sunt placeat ipsa! Ducimus, eius voluptatem. Deleniti ullam ipsum quos fugiat saepe numquam necessitatibus.</p>
+                    <h3>Alejandro Mariacca</h3>
+                </div>
+            </div>
+            <div class="equipo-col">
+                <img src="images/person-placeholder.png">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo atque inventore voluptatibus suscipit ab odio at sunt placeat ipsa! Ducimus, eius voluptatem. Deleniti ullam ipsum quos fugiat saepe numquam necessitatibus.</p>
+                    <h3>Aranza García</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="equipo-col">
+                <img src="images/person-placeholder.png">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo atque inventore voluptatibus suscipit ab odio at sunt placeat ipsa! Ducimus, eius voluptatem. Deleniti ullam ipsum quos fugiat saepe numquam necessitatibus.</p>
+                    <h3>Daniel Martínez</h3>
+                </div>
+            </div>
+            <div class="equipo-col">
+                <img src="images/person-placeholder.png">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo atque inventore voluptatibus suscipit ab odio at sunt placeat ipsa! Ducimus, eius voluptatem. Deleniti ullam ipsum quos fugiat saepe numquam necessitatibus.</p>
+                    <h3>Clarita Osorio</h3>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!--Call to Action--->
+    <section class="cta">
+        <h1>Estamos Aquí Para Apoyarte</h1>
+        <a href="#." class="descarga-inline">CONTÁCTANOS</a>
+    </section>
+    
+    
+    <!--Footer--->
+    <section class="footer">
+        <h4>Sobre nosotros</h4>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ducimus quidem labore? Praesentium blanditiis <br>minus quod enim eius magni deleniti laborum perferendis ratione, est rerum eaque incidunt nostrum maxime, eos nihil soluta quasi, id itaque?</p>
+        <div class="icons">
+            <i class="fa fa-github"></i>
+        </div>
+        <p>Hecho con <i class="fa fa-heart-o"></i> por el equipo de desarrollo</p>
+    </section>
 
 <!------JavaScript para activar menu------>
 <script>
@@ -87,38 +142,3 @@
 
 </body>
 </html>
-
-<!--
-<!DOCTYPE html>
-<html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet" type="text/css">
-        <title>Drum Game</title>
-    </head>
-    <body>
-        <section class="primera-parte">
-            <div class="header">
-                <img class="logo" src="images/DrumLogo.png" alt="Logo">
-                <nav>
-                    <ul class="nav_links">
-                        <li><a href="#">Iniciar Sesión</a></li>
-                    </ul>
-                </nav>
-                <a class="cta"><button href="#">Descargas</button></a>
-            </div>
-
-            <div class="text-box">
-                <h1>La percusión es un mundo distinto....</h1>
-                <p>
-                    En todos lados podemos encontrar ritmo, pero, ¿podemos distinguir los
-                    tipos de sonidos? Nuestro juego de enseñanza procura mejorar esta
-                    habilidad de reconocer instrumentos percusivos.
-                </p>
-            </div>
-        </section>
-
-    </body>
-</html> 
--->
