Conección con API y github

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
-                    <li><a href="#.">NUESTRA API</a></li>
+                    <li><a href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
                     <li><a href="#.">LEADERBOARD</a></li>
                     <li><a href="#.">INICIAR SESIÓN</a></li>
                     <li><a href="#.">DESCARGA</a></li>
@@ -123,7 +123,7 @@
         <h4>Sobre nosotros</h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id ducimus quidem labore? Praesentium blanditiis <br>minus quod enim eius magni deleniti laborum perferendis ratione, est rerum eaque incidunt nostrum maxime, eos nihil soluta quasi, id itaque?</p>
         <div class="icons">
-            <i class="fa fa-github"></i>
+            <a href="https://github.com/alemarsa-exe/Drum-Game-WebPage" target="_blank"><i class="fa fa-github"></i></a>
         </div>
         <p>Hecho con <i class="fa fa-heart-o"></i> por el equipo de desarrollo</p>
     </section>
