Login Page (a medias)

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
                     <li><a href="#.">DESCARGA</a></li>
-                    <li><a href="#.">INICIAR SESIÓN</a></li>
+                    <li><a href="login.html">INICIAR SESIÓN</a></li>
                     <li><a href="#.">LEADERBOARD</a></li>
                     <li><a href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
                 </ul>
