--- a/Signup.html
+++ b/Signup.html
@@ -11,9 +11,9 @@
     <title>Sign up</title>
 </head>
 
-<body class="body-login-2">
-    <!---Sub-header
-    <section class="sub-header">
+<body class="all-body-2">
+    <!---Sub-header --->
+    <section class="sub-header-sesion">
         <nav>
             <a href="index.html"> <img src="images/DrumLogoBlanco.png" alt="drum-logo"> </a>
             <div class="nav-links" id="navLinks">
@@ -29,9 +29,9 @@
         </nav>
     </section>
 
-    --->
+    <div class="body-login-2">
 
-    <div class="container-login">
+        <div class="container-login">
         <div class="cover-1">
             <div class="front">
                 <img src="images/baterista-blanco-y-negro.jpg" alt="drummer">
@@ -85,6 +85,10 @@
             </div>
         </form>
     </div>
+
+    </div>
+
+    
 
 <!------JavaScript para activar menu------>
 <script>
