--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="#.">DESCARGA</a></li>
                     <li><a href="Login.html">INICIAR SESIÓN</a></li>
-                    <li><a href="#.">LEADERBOARD</a></li>
+                    <li><a href="leaderboards.html">LEADERBOARD</a></li>
                     <li><a href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
