--- a/Login.html
+++ b/Login.html
@@ -20,7 +20,7 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
                     <li><a  href="#.">DESCARGA</a></li>
-                    <li><a href="#.">LEADERBOARD</a></li>
+                    <li><a href="leaderboards.html">LEADERBOARD</a></li>
                     <li><a  href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
