--- a/Login.html
+++ b/Login.html
@@ -19,7 +19,7 @@
             <div class="nav-links a-in-subheader" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
-                    <li><a  href="#.">DESCARGA</a></li>
+                    <li><a  href="descarga.html">DESCARGA</a></li>
                     <li><a href="leaderboards.html">LEADERBOARD</a></li>
                     <li><a  href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
