--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa fa-times" onclick="hideMenu()"></i> 
                 <ul>
-                    <li><a href="#.">DESCARGA</a></li>
+                    <li><a href="descarga.html">DESCARGA</a></li>
                     <li><a href="login.html">INICIAR SESIÓN</a></li>
                     <li><a href="leaderboards.html">LEADERBOARD</a></li>
                     <li><a href="https://daniumm.github.io/" target="_blank">NUESTRA API</a></li>
