--- a/descarga.html
+++ b/descarga.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!---Header-->
-    <section class="header">
+    <section class="header-descarga">
         <nav>
             <a href="index.html"> <img src="images/DrumLogoBlanco.png" alt="drum-logo"> </a>
             <div class="nav-links" id="navLinks">
